Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15592

couch_dbdump: dumps compressed documents incorrectly.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 4.5.0
    • 4.5.0
    • storage-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Running dbdump against a couchstore file that has 100, 1024 byte compressed, non-JSON documents observed that some of the documents don't get printed correctly and the size is wrong.

      Appears that dbdumps manual snappy decompress code is wrong, yet we can just ask couchstore to decompress for us which always gets it right.

      Attachments

        For Gerrit Dashboard: MB-15592
        # Subject Branch Project Status CR V

        Activity

          People

            jwalker Jim Walker
            jwalker Jim Walker
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty