MB-15592: couch_dbdump - get libcouchstore to decompress doucment bodies.

Remove the code which performs snappy decompress of the body and just
use DECOMPRESS_DOC_BODIES flag when reading the document.

Change-Id: I485088aed1f81c9921dbdf7f323271e6edff827b
Reviewed-on: http://review.couchbase.org/52961
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Reviewed-by: Volker Mische <volker.mische@gmail.com>